# h3-kmp

./: .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: gradle.yml  publish.yml  wasmpublish.yml
androidLibrary/: build.gradle.kts
androidLibrary/src/main/cpp/: CMakeLists.txt  jniapi.cpp
androidSample/: build.gradle.kts
androidSample/src/main/kotlin/com/beriukhov/h3/sample/android/: MainActivity.kt
cinterop/h3/: h3.def
cinterop/h3/headers/: h3api.h
commonSample/: build.gradle.kts
commonSample/iosApp/iosApp.xcodeproj/: project.pbxproj
commonSample/src/androidMain/kotlin/com/beriukhov/h3/sample/map/: H3MapView.android.kt
commonSample/src/commonMain/kotlin/com/beriukhov/h3/sample/: App.kt  MapDemoState.kt
commonSample/src/commonMain/kotlin/com/beriukhov/h3/sample/map/: H3MapView.kt
commonSample/src/commonMain/kotlin/com/beriukhov/h3/sample/ui/: Components.kt  DocsTab.kt  MapTab.kt
commonSample/src/iosMain/kotlin/com/beriukhov/h3/sample/map/: H3MapView.ios.kt
commonSample/src/wasmJsMain/kotlin/com/beriukhov/h3/sample/: Main.kt
commonSample/src/wasmJsMain/kotlin/com/beriukhov/h3/sample/map/: H3MapView.wasmJs.kt
commonSample/src/wasmJsMain/resources/: index.html
gradle/: libs.versions.toml
sample/: build.gradle.kts
sample/iosApp/Configuration/: Config.xcconfig
sample/iosApp/iosApp.xcodeproj/: project.pbxproj
sample/src/androidMain/kotlin/com/beriukhov/h3/sample/: MainActivity.kt
sample/src/commonMain/kotlin/com/beriukhov/h3/sample/: App.kt
sample/src/iosMain/kotlin/com/beriukhov/h3/sample/: MainViewController.kt
